[tool.poetry]
name = "order-to-cash-agentic-ai"
version = "0.1.0"
description = "Enterprise-grade Order-to-Cash Agentic AI Platform"
authors = ["Subham Gupta"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Web framework
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# LangChain / LangGraph
langchain = "^0.2.0"
langchain-aws = "^0.1.0"
langchain-openai = "^0.1.0"
langgraph = "^0.1.17"   # corrected to a valid release

# AWS SDK
boto3 = ">=1.34.72,<2.0.0"
botocore = ">=1.34.72,<2.0.0"

# RAG / Vector store
opensearch-py = "^2.6.0"
sentence-transformers = "^3.0.0"
tiktoken = "^0.7.0"

# Observability
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
aws-xray-sdk = "^2.13.0"

# Utilities
httpx = "^0.27.0"
tenacity = "^8.3.0"
structlog = "^24.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
ruff = "^0.4.0"
pre-commit = "^3.7.0"
ragas = "^0.1.0"
moto = { version = "^5.0.0", extras = ["all"] }

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
